--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -15,6 +15,11 @@
 
   <!-- Header -->
   <header id="header">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
       <ul>
@@ -42,10 +47,10 @@
         <p>Dragon Storm is an interactive game in which users fly a dragon using key board movements in attempt to burn down structures
         for as long as they can. / <a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
         <ul>Dragon Storm was programmed using:
-          <li>Javascript (ES6)</li>
-          <li>HTML5</li>
-          <li>CSS</li>
-          <li>Webpack</li>
+          <li><i class="devicon-javascript-plain"></i> Javascript (ES6)</li>
+          <li><i class="devicon-html5-plain"></i> HTML5</li>
+          <li><i class="devicon-css3-plain"></i> CSS</li>
+          <li><i class="devicon-webpack-plain"></i> Webpack</li>
         </ul>
         <p>I integrated the Canvas API, using JavaScript, to draw graphics, animations, and photo-manipulation in real-time to
         create a dynamic experience for users. Event-listeners were also implemented in order to trigger fire blowing effects
