--- a/mango-music.html
+++ b/mango-music.html
@@ -15,6 +15,16 @@
 
   <!-- Header -->
   <header id="header">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
       <ul>
@@ -42,16 +52,15 @@
         <p>Mango Music is a social media platform where users can search for tracks, create posts, leave comments and like others
         posts on songs they love. I collaborated on this project alongside three other developers. / <a href="https://github.com/MangoMusicMedia/mango-music" target="_blank">Github</a></p>
         <ul>Mango Music was programmed using:
-          <li>ReactJS</li>
-          <li>Javascript</li>
-          <li>CSS</li>
-          <li>SASS</li>
-          <li>HTML5</li>
-          <li>MongoDB</li>
-          <li>Mongoose</li>
-          <li>Node.js</li>
-          <li>Heroku</li>
-          <li>Git</li>
+          <li><i class="devicon-react-original"></i> ReactJS</li>
+          <li><i class="devicon-javascript-plain"></i> Javascript</li>
+          <li><i class="devicon-css3-plain"></i> CSS</li>
+          <li><i class="devicon-sass-original"></i> SASS</li>
+          <li><i class="devicon-html5-plain"></i> HTML5</li>
+          <li><i class="devicon-mongodb-plain"></i> MongoDB</li>
+          <li><i class="devicon-nodejs-plain"></i> Node.js</li>
+          <li><i class="devicon-heroku-original"></i> Heroku</li>
+          <li><i class="devicon-git-plain"></i> Git</li>
         </ul>
         <p>We utilized Spotify’s API to extract an array of musical information, and integrated search by song functionality. I
         integrated advanced SCSS (SASS) animations to create movement and professional design and experience. In addition, I
