--- a/plantsy.html
+++ b/plantsy.html
@@ -15,6 +15,17 @@
 
   <!-- Header -->
   <header id="header">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
       <ul>
@@ -42,18 +53,17 @@
         <p>Plantsy is a full-stack clone of Esty where users can create/sell products, leave reviews, and add products to their
         cart. / <a href="https://github.com/kingbloopy/Plantsy" target="_blank">Github</a> </p>
         <ul> Plantsy was programmed using:
-          <li>ReactJS</li>
-          <li>Ruby on Rails</li>
-          <li>PostgreSQL</li>
-          <li>CSS</li>
-          <li>SASS</li>
-          <li>HTML5</li>
-          <li>Javascript</li>
-          <li>jQuery</li>
-          <li>jbuilder</li>
-          <li>Webpack</li>
-          <li>Git</li>
-          <li>Heroku</li>
+          <li><i class="devicon-react-original"></i> ReactJS</li>
+          <li><i class="devicon-ruby-plain"></i> Ruby on Rails</li>
+          <li><i class="devicon-postgresql-plain"></i> PostgreSQL</li>
+          <li><i class="devicon-css3-plain"></i> CSS</li>
+          <li><i class="devicon-sass-original"></i> SASS</li>
+          <li><i class="devicon-html5-plain"></i> HTML5</li>
+          <li><i class="devicon-javascript-plain"></i> Javascript</li>
+          <li><i class="devicon-jquery-plain"></i> jQuery</li>
+          <li><i class="devicon-webpack-plain"></i> Webpack</li>
+          <li><i class="devicon-git-plain"></i> Git</li>
+          <li><i class="devicon-heroku-original"></i> Heroku</li>
         </ul>
         <p>I utilized CSS media queries and columns, creating the classic masonry style to aesthetically render a products index.
         In addition, mapStateToProps were used to dispatch thunk actions, normalizing the state shape, and efficiently updating
