--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 													<li class="linked"><a target="_blank" href="https://www.linkedin.com/in/maggie-mae-mcdonald/"><i class="devicon-linkedin-plain"></i></a></li>
 										
-											<li><a class="icon brands" target="_blank" href="">
+											<li><a class="icon brands" target="_blank" href="https://angel.co/u/maggie-mcdonald-2">
 													<svg class="angel-svg" width="40" height="40" viewBox="0 0 256 369" xmlns="http://www.w3.org/2000/svg"
 														preserveAspectRatio="xMidYMid">
 														<path
