--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/plantsy1.png" alt="" data-position="center center" /></a>
+							<a href="plantsy.html" class="image"><img src="images/plantsy1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Plantsy</h2>
@@ -63,7 +63,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="two" href="two" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
+							<a id="two" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Mango Music</h2>
@@ -75,7 +75,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="three" href="three" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
+							<a id="three" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dragon Storm</h2>
@@ -87,7 +87,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="four" href="four" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
+							<a id="four" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Design Projects</h2>
