--- a/mango-music.html
+++ b/mango-music.html
@@ -45,7 +45,7 @@
     <section id="main" class="wrapper">
       <div class="inner">
         <div class="link-wrapper">
-          <h1 class="major">Mango</h1>
+          <h1 class="major">Mango Music</h1>
           <a target="_blank" href="https://mango-music-fsp.herokuapp.com/#/" class="button">Live Site</a>
         </div>
         <span class="image fit"><img src="images/mango2.png" alt="" /></span>
