--- a/mango-music.html
+++ b/mango-music.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Maggie McDonald</title>
+  <link rel="shortcut icon" type="image/png" href="./images/favicon-16x16.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
