--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -108,8 +113,35 @@
 							that I have always enjoyed exploring and growing. I love learning about new technologies and challenging myself to think
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
 							to craft an interface that is innovative, visually appealing, and intuitive for everyone.</p>
+							<h3>My Skills</h3>
+							<div class="features">
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-react-original"></i></span>
+									<h3>ReactJS</h3>
+								</section>
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-redux-original"></i></span>
+									<h3>ReduxJS</h3>
+								</section>
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-sass-original"></i></span>
+									<h3>SASS</h3>
+								</section>
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-javascript-plain"></i></span>
+									<h3>Javascript ES6</h3>
+								</section>
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-ruby-plain"></i></span>
+									<h3>Ruby on Rails</h3>
+								</section>
+								<section>
+									<span class="icon solid"><i class="lang-icon devicon-postgresql-plain"></i></span>
+									<h3>PostgreSQL</h3>
+								</section>
+							</div>
 							<ul class="actions">
-								<li><a href="about-me.html" class="button">Learn more about me</a></li>
+								<li><a href="about-me.html" class="about-button button">Learn more about me</a></li>
 							</ul>
 						</div>
 					</section>
@@ -147,26 +179,6 @@
 										</ul>
 										</div>
 									</div>
-								
-									<!-- <form method="post" action="contact-form-process.php">
-										<div class="fields">
-											<div class="field half">
-												<label for="Name">Name</label>
-												<input type="text" name="Name" id="Name" />
-											</div>
-											<div class="field half">
-												<label for="Email">Email</label>
-												<input type="text" name="Email" id="Email" />
-											</div>
-											<div class="field">
-												<label for="Message">Message</label>
-												<textarea name="Message" id="Message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><button type="submit" class="button submit">Send Message</button></li>
-										</ul>
-									</form> -->
 								</section>
 								<section>
 									<ul class="contact">
