--- a/index.html
+++ b/index.html
@@ -116,28 +116,40 @@
 							<h3>My Skills</h3>
 							<div class="features">
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-react-original"></i></span>
-									<h3>ReactJS</h3>
+									<a href="https://reactjs.org/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-react-original"></i></span>
+										<h3>ReactJS</h3>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-redux-original"></i></span>
-									<h3>ReduxJS</h3>
+									<a href="https://redux.js.org/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-redux-original"></i></span>
+										<h3>ReduxJS</h3>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-sass-original"></i></span>
-									<h3>SASS</h3>
+									<a href="https://sass-lang.com/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-sass-original"></i></span>
+										<h3>SASS</h3>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-javascript-plain"></i></span>
-									<h3>Javascript ES6</h3>
+									<a href="https://www.javascript.com/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-javascript-plain"></i></span>
+										<h3>Javascript ES6</h3>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-ruby-plain"></i></span>
-									<h3>Ruby on Rails</h3>
+									<a href="https://rubyonrails.org/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-ruby-plain"></i></span>
+										<h3>Ruby on Rails</h3>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid"><i class="lang-icon devicon-postgresql-plain"></i></span>
-									<h3>PostgreSQL</h3>
+									<a href="https://www.postgresql.org/" target="_blank">
+										<span class="icon solid"><i class="lang-icon devicon-postgresql-plain"></i></span>
+										<h3>PostgreSQL</h3>
+									</a>
 								</section>
 							</div>
 							<ul class="actions">
