--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Dragon Storm</h2>
-									<p>Dragon Storm is an interactive game in which users fly a dragon using key movements and attempt to burn down structures for as long as they can.</p>
+									<p>Dragon Storm is an interactive game in which users fly a dragon using key movements in an attempt to burn down structures for as long as they can.</p>
 									<ul class="actions">
 										<li><a href="dragon-storm.html" class="button">Learn more</a></li>
 									</ul>
@@ -171,11 +171,6 @@
 										<div class="social-links">
 										<h3>Social</h3>
 										<ul class="icons">
-											<!-- <li><a target="_blank" href="https://github.com/kingbloopy" class="icon brands fa-github"><span
-														class="label">GitHub</span></a></li>
-										
-											<li><a target="_blank" href="https://www.linkedin.com/in/maggie-mae-mcdonald/"
-													class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
 
 													<li class="git"><a target="_blank" href="https://github.com/kingbloopy"><i class="devicon-github-original"></i></a></li>
 
