--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 							<div class="split style1">
 								<section>
 									<div class="contact-details">
-										<a class="button primary fit email-me" href="mailto: kingbloopy@gmail.com?subject=Love your work! Let's talk about a job." download>Email Me</a>
+										<a class="button primary fit email-me" href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." download>Email Me</a>
 										<a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
 										<div class="social-links">
 										<h3>Social</h3>
@@ -201,7 +201,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="mailto: kingbloopy@gmail.com?subject=Love your work! Let's talk about a job." >kingbloopy@gmail.com</a>
+											<a href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." >maggiemae.mcd@gmail.com</a>
 										</li>
 										<li>
 										</li>
