--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -23,7 +23,7 @@
 
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
-      <ul>
+      <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
@@ -60,6 +60,7 @@
         rendering of key-presses and clicks using a combination of CSS and JavaScript’s classList.</p>
         <p>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, including all graphic art, designs,
         colors, and layout.</p>
+        <p><a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
       </div>
     </section>
 
