--- a/graphic-design.html
+++ b/graphic-design.html
@@ -18,7 +18,7 @@
   <header id="header">
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
-      <ul>
+      <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
