--- a/mango-music.html
+++ b/mango-music.html
@@ -28,7 +28,7 @@
 
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
-      <ul>
+      <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html" class="active">Mango Music</a></li>
@@ -68,6 +68,7 @@
         also implemented BEM CSS naming convention to write cleaner, scalable, and more readable code.</p>
         <p>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the graphic art, web layout,
         color schemes, etc.</p>
+        <p><a href="https://github.com/MangoMusicMedia/mango-music" target="_blank">Github</a></p>
       </div>
     </section>
 
