--- a/plantsy.html
+++ b/plantsy.html
@@ -29,7 +29,7 @@
 
     <a href="index.html" class="title">Maggie McDonald</a>
     <nav>
-      <ul>
+      <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
         <li><a href="plantsy.html" class="active">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
@@ -76,6 +76,7 @@
         as well as Jbuilder to transpile rails data into JSON for a ReactJS frontend.</p>
         <p>I designed the majority of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the logos and color
         schemes.</p>
+        <p><a href="https://github.com/kingbloopy/Plantsy" target="_blank">Github</a></p>
       </div>
     </section>
 
