--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="plantsy.html" class="image"><img src="images/plantsy1.png" alt="" data-position="center center" /></a>
+							<a href="plantsy.html" class="image"><img src="images/plansty1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Plantsy</h2>
