--- a/plantsy.html
+++ b/plantsy.html
@@ -50,7 +50,7 @@
           <h1 class="major">Plantsy</h1>
           <a target="_blank" href="https://plantsy-etsy.herokuapp.com/#/" class="button">Live Site</a>
         </div>
-        <span class="image fit"><img src="images/plantsy2.png" alt="" /></span>
+        <span class="image fit"><img src="images/plansty2.png" alt="" /></span>
         <p>Plantsy is a full-stack clone of Esty where users can create/sell products, leave reviews, and add products to their
         cart. / <a href="https://github.com/kingbloopy/Plantsy" target="_blank">Github</a> </p>
         <ul> Plantsy was programmed using:
