--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Maggie McDonald</h1>
-							<p>I am a Full-Stack Software Engineer.</p>
+							<p>I am a Frontend Software Developer.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Portfolio Projects</a></li>
 							</ul>
