--- a/about-me.html
+++ b/about-me.html
@@ -46,7 +46,7 @@
         logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
         to craft an interface that is innovative, visually appealing, and intuitive for everyone.
         
-        Currently, I am learning TypeScript, React Native, and Figma. I strive to find time to learn more!</p>
+        Currently, I am learning TypeScript, Vue.js, and Next.js. I strive to find time to learn more!</p>
       </div>
     </section>
 
