created developer projects page

--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -28,6 +28,7 @@
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
         <li><a href="dragon-storm.html" class="active">Dragon Storm</a></li>
+        <li><a href="dev-projects.html">Developer Projects</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html">About Me</a></li>
       </ul>
@@ -46,7 +47,7 @@
         </div>
         <span class="image fit"><img src="images/dragon2.png" alt="" /></span>
         <p>Dragon Storm is an interactive game in which users fly a dragon using key board movements in attempt to burn down structures
-        for as long as they can. / <a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
+        for as long as they can.</p>
         <ul>Dragon Storm was programmed using:
           <li><i class="devicon-javascript-plain"></i> Javascript (ES6)</li>
           <li><i class="devicon-html5-plain"></i> HTML5</li>
