--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 							<li><a href="#one">Plantsy</a></li>
 							<li><a href="#two">Mango Music</a></li>
 							<li><a href="#three">Dragon Storm</a></li>
-							<li><a href="#four">Design Projects</a></li>
-							<li><a href="#five">About Me</a></li>
-							<li><a href="#six">Get in touch</a></li>
+							<li><a href="#four">Developer Projects</a></li>
+							<li><a href="#five">Design Projects</a></li>
+							<li><a href="#six">About Me</a></li>
+							<li><a href="#seven">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -92,7 +93,19 @@
 							</div>
 						</section>
 						<section>
-							<a id="four" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
+							<a id="four" href="dragon-storm.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Developer Projects</h2>
+									<p>I have proficient developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<ul class="actions">
+										<li><a href="dev-projects.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a id="five" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Design Projects</h2>
@@ -106,7 +119,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="five" class="wrapper style3 fade-up">
+					<section id="six" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
 							<p>Whether it is design, graphic art, photography, making music or programming a new application, I have a creative side
@@ -159,7 +172,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="six" class="wrapper style1 fade-up">
+					<section id="seven" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Thank you for taking the time to look at my Portfolio. I am looking forward to getting in touch with you.</p>
@@ -191,9 +204,9 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>750 Hot Springs Road,<br />
+											<span>1807 Robbins Street,<br />
 												Santa Barbara, California<br />
-											USA, 93108</span>
+											USA, 93101</span>
 										</li>
 										<li>
 											<h3>Phone</h3>
