--- a/plantsy.html
+++ b/plantsy.html
@@ -34,6 +34,7 @@
         <li><a href="plantsy.html" class="active">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
+        <li><a href="dev-projects.html">Developer Projects</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html">About Me</a></li>
       </ul>
