--- a/about-me.html
+++ b/about-me.html
@@ -23,6 +23,7 @@
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html">Mango Music</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
+        <li><a href="dev-projects.html">Developer Projects</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html" class="active">About Me</a></li>
       </ul>
