--- a/mango-music.html
+++ b/mango-music.html
@@ -33,6 +33,7 @@
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html" class="active">Mango Music</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
+        <li><a href="dev-projects.html">Developer Projects</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html">About Me</a></li>
       </ul>
