--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Developer Projects</h2>
-									<p>I have proficient developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<p>I have professional developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
 									<ul class="actions">
 										<li><a href="dev-projects.html" class="button">Learn more</a></li>
 									</ul>
