fix background color

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
 							</div>
 						</section>
 						<section>
+							<a id="four" href="dev-projects.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Developer Projects</h2>
+									<p>I have professional developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<ul class="actions">
+										<li><a href="dev-projects.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
 							<a id="two" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -88,18 +100,6 @@
 									<p>Dragon Storm is an interactive game in which users fly a dragon using key movements in an attempt to burn down structures for as long as they can.</p>
 									<ul class="actions">
 										<li><a href="dragon-storm.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a id="four" href="dragon-storm.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Developer Projects</h2>
-									<p>I have professional developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
-									<ul class="actions">
-										<li><a href="dev-projects.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
