fix bug on home page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Plantsy</a></li>
-							<li><a href="#two">Mango Music</a></li>
-							<li><a href="#three">Dragon Storm</a></li>
-							<li><a href="#four">Developer Projects</a></li>
+							<li><a href="#two">Dragon Storm</a></li>
+							<li><a href="#three">Developer Projects</a></li>
+							<li><a href="#four">Mango Music</a></li>
 							<li><a href="#five">Design Projects</a></li>
 							<li><a href="#six">About Me</a></li>
 							<li><a href="#seven">Get in touch</a></li>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="three" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
+							<a id="two" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dragon Storm</h2>
@@ -81,7 +81,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="four" href="dev-projects.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
+							<a id="three" href="dev-projects.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Developer Projects</h2>
@@ -93,7 +93,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="two" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
+							<a id="four" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Mango Music</h2>
