update wording for dev projects

--- a/dev-projects.html
+++ b/dev-projects.html
@@ -63,7 +63,7 @@
           </li>
           <li>
             <a target="_blank" href="https://www.michaelstars.com/collections/all-clothing">
-              On the category pages, I created the filters dropdown and sort-by dropdown menus.
+              On the category pages, I created the filters dropdown, sort-by dropdown menus, and pagination functionality.
             </a>
           </li>
           <li>
@@ -73,7 +73,7 @@
           </li>
           <li>
             <a target="_blank" href="https://www.michaelstars.com/account">
-              On the user account page, I programmed most of the form submission logic for updating address information as well as designing layout of the page.
+              On the user account page, I programmed most of the form submission logic for updating address information and created page layout.
             </a>
           </li>
         </ul>
