--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 								<section>
 									<div class="contact-details">
 										<a class="button primary fit email-me" href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." download>Email Me</a>
-										<a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
+										<a class="button fit" href="/assets/Maggie McDonald Resume - Google Docs.pdf" download>Download Resume</a>
 										<div class="social-links">
 										<h3>Social</h3>
 										<ul class="icons">
