--- a/dev-projects.html
+++ b/dev-projects.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="inner">
-        <div class="dev-wrapper">
+        <div class="dev-wrapper other-projects">
           <h2>Other Projects</h2>
           <div>
             <a target="_blank" href="https://this.place/" class="button">This Place</a>
