--- a/index.html
+++ b/index.html
@@ -204,9 +204,8 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>1807 Robbins Street,<br />
-												Santa Barbara, California<br />
-											USA, 93101</span>
+											<span>Moab, Utah<br />
+											USA, 84532</span>
 										</li>
 										<li>
 											<h3>Phone</h3>
