--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Plantsy</a></li>
-							<li><a href="#two">Dragon Storm</a></li>
-							<li><a href="#three">Developer Projects</a></li>
-							<li><a href="#four">Mango Music</a></li>
-							<li><a href="#five">Design Projects</a></li>
-							<li><a href="#six">About Me</a></li>
-							<li><a href="#seven">Get in touch</a></li>
+							<li><a href="#plantsy">Plantsy</a></li>
+							<li><a href="#dragon-storm">Dragon Storm</a></li>
+							<li><a href="#dev23">Developer Projects '23</a></li>
+							<li><a href="#dev22">Developer Projects '22</a></li>
+							<li><a href="#mango">Mango Music</a></li>
+							<li><a href="#design">Design Projects</a></li>
+							<li><a href="#about">About Me</a></li>
+							<li><a href="#contact">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -46,16 +47,17 @@
 							<h1>Maggie McDonald</h1>
 							<p>I am a Frontend Software Engineer.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Portfolio Projects</a></li>
+								<li><a href="#plantsy" class="button scrolly">Portfolio Projects</a></li>
 							</ul>
 						</div>
 						<div class="profile-pic-wrapper">
-							<img id="profile-pic" src="./images/profile-pic.JPG" alt="profile-pic">
+							<img id="profile-pic" src="./images/rock.jpg" alt="profile-pic">
+							<span class="pic-desc">* I also like to climb!</span>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="plantsy" class="wrapper style2 spotlights">
 						<section>
 							<a href="plantsy.html" class="image"><img src="images/plansty1.png" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -69,7 +71,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="two" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
+							<a id="dragon-storm" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dragon Storm</h2>
@@ -81,19 +83,31 @@
 							</div>
 						</section>
 						<section>
-							<a id="three" href="dev-projects.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
+							<a id="dev23" href="dev-projects23.html" class="image"><img src="images/lemlem.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Developer Projects</h2>
-									<p>I have professional developer experience working with big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<h2>Developer Projects 2023</h2>
+									<p>Professional developer projects for big-brand clients such as Lemlem, Veer, Kashwere and Sente.</p>
 									<ul class="actions">
-										<li><a href="dev-projects.html" class="button">Learn more</a></li>
+										<li><a href="dev-projects23.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a id="four" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
+							<a id="dev22" href="dev-projects22.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Developer Projects 2022</h2>
+									<p>Professional developer projects for big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<ul class="actions">
+										<li><a href="dev-projects22.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a id="mango" href="mango-music.html" class="image"><img src="images/mango1.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Mango Music</h2>
@@ -105,7 +119,7 @@
 							</div>
 						</section>
 						<section>
-							<a id="five" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
+							<a id="design" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Design Projects</h2>
@@ -119,7 +133,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="six" class="wrapper style3 fade-up">
+					<section id="about" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
 							<p>Whether it is design, graphic art, photography, making music or programming a new application, I have a creative side
@@ -172,7 +186,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="seven" class="wrapper style1 fade-up">
+					<section id="contact" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Thank you for taking the time to look at my Portfolio. I am looking forward to getting in touch with you.</p>
@@ -180,7 +194,7 @@
 								<section>
 									<div class="contact-details">
 										<a class="button primary fit email-me" href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." download>Email Me</a>
-										<a class="button fit" href="/assets/Maggie McDonald Resume - Google Docs.pdf" download>Download Resume</a>
+										<a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
 										<div class="social-links">
 										<h3>Social</h3>
 										<ul class="icons">
