--- a/mango-music.html
+++ b/mango-music.html
@@ -32,7 +32,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
-        <li><a href="dev-projects.html">Developer Projects</a></li>
+        <li><a href="dev-projects23.html">Dev '23</a></li>
+        <li><a href="dev-projects22.html">Dev '22</a></li>        
         <li><a href="mango-music.html" class="active">Mango Music</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html">About Me</a></li>
