update order on index

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#plantsy">Plantsy</a></li>
-							<li><a href="#dragon-storm">Dragon Storm</a></li>
 							<li><a href="#dev23">Developer Projects '23</a></li>
 							<li><a href="#dev22">Developer Projects '22</a></li>
+							<li><a href="#dragon-storm">Dragon Storm</a></li>
+							<li><a href="#plantsy">Plantsy</a></li>
 							<li><a href="#mango">Mango Music</a></li>
 							<li><a href="#design">Design Projects</a></li>
 							<li><a href="#about">About Me</a></li>
@@ -57,31 +57,7 @@
 					</section>
 
 				<!-- One -->
-					<section id="plantsy" class="wrapper style2 spotlights">
-						<section>
-							<a href="plantsy.html" class="image"><img src="images/plansty1.png" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Plantsy</h2>
-									<p>Plantsy is a full-stack clone of Etsy where users can create/sell products, leave reviews, and add products to their cart.</p>
-									<ul class="actions">
-										<li><a href="plantsy.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a id="dragon-storm" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Dragon Storm</h2>
-									<p>Dragon Storm is an interactive game in which users fly a dragon using key movements in an attempt to burn down structures for as long as they can.</p>
-									<ul class="actions">
-										<li><a href="dragon-storm.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+					<section id="dev23" class="wrapper style2 spotlights">
 						<section>
 							<a id="dev23" href="dev-projects23.html" class="image"><img src="images/lemlem.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
@@ -102,6 +78,33 @@
 									<p>Professional developer projects for big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
 									<ul class="actions">
 										<li><a href="dev-projects22.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a id="dragon-storm" href="dragon-storm.html" class="image"><img src="images/dragon1.png" alt=""
+									data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Dragon Storm</h2>
+									<p>Dragon Storm is an interactive game in which users fly a dragon using key movements in an attempt to burn down
+										structures for as long as they can.</p>
+									<ul class="actions">
+										<li><a href="dragon-storm.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a id="plantsy" href="plantsy.html" class="image"><img src="images/plansty1.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Plantsy</h2>
+									<p>Plantsy is a full-stack clone of Etsy where users can create/sell products, leave reviews, and add products to
+										their cart.</p>
+									<ul class="actions">
+										<li><a href="plantsy.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
