fix link to portfolio button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h1>Maggie McDonald</h1>
 							<p>I am a Frontend Software Engineer.</p>
 							<ul class="actions">
-								<li><a href="#plantsy" class="button scrolly">Portfolio Projects</a></li>
+								<li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li>
 							</ul>
 						</div>
 						<div class="profile-pic-wrapper">
