--- a/dev-projects23.html
+++ b/dev-projects23.html
@@ -45,6 +45,24 @@
         <div class="link-wrapper">
           <h1 class="major">Developer Projects 2023</h1>
         </div>
+
+        <div class="inner">
+          <div class="dev-wrapper">
+            <h2>Sweden Unlimited Shop</h2>
+            <a target="_blank" href="https://shop.swedenunlimited.com/" class="button">Live Site</a>
+          </div>
+          <span class="image fit"><img src="images/sweden.png" alt="" /></span>
+          <p>Completed redesign on the Sweden Unlimited Merch Shop as lead developer on the project.</p>
+          <ul>Major components that I developed and contributed to:
+            <li>
+              Independently developed most of the home page such as all the image banners, sliders, and animations.
+            </li>
+            <li>
+              Incoperated SwiperJS for carousel animations.
+            </li>
+          </ul>
+        </div>
+
         <div class="dev-wrapper">
           <h2>Lemlem</h2>
           <a target="_blank" href="https://www.lemlem.com/" class="button">Live Site</a>
