--- a/dev-projects23.html
+++ b/dev-projects23.html
@@ -55,7 +55,7 @@
           <p>Completed redesign on the Sweden Unlimited Merch Shop as lead developer on the project.</p>
           <ul>Major components that I developed and contributed to:
             <li>
-              Independently developed most of the home page such as all the image banners, sliders, and animations.
+              Independently developed the home page such as all the image banners, sliders, and animations.
             </li>
             <li>
               Incoperated SwiperJS for carousel animations.
