--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
+						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
 							<p>I am a Frontend Software Engineer.</p>
 							<ul class="actions">
