--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
-							<p>I am a Frontend Software Engineer.</p>
+							<p>I am an experienced Product Manager with a strong foundation in leading cross-function teams, with with a keen eye for detail and design.</p>
 							<ul class="actions">
-								<li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li>
+								<li><a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a></li>
+								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
 							</ul>
 						</div>
 						<div class="profile-pic-wrapper">
@@ -220,17 +221,17 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>Moab, Utah<br />
-											USA, 84532</span>
+											<h3>Email</h3>
+											<a href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job.">maggiemae.mcd@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
 											<span>(805) 570-2155</span>
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." >maggiemae.mcd@gmail.com</a>
+											<h3>Location</h3>
+											<span>Moab, Utah<br />
+												USA, 84532</span>
 										</li>
 										<li>
 										</li>
